[project]
name = "fuel-route-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.15",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
]
